@@ -9,13 +9,18 @@ t::
 # This shields the test from whatever is installed on the host.
 define ZMK.isolateHostToolchain
 %.log: ZMK.makeOverrides += Toolchain.CC.IsAvailable=yes
-%.log: ZMK.makeOverrides += Toolchain.CXX.IsAvailable=yes
+%.log: ZMK.makeOverrides += Toolchain.CC.IsClang=
 %.log: ZMK.makeOverrides += Toolchain.CC.IsGcc=yes
+%.log: ZMK.makeOverrides += Toolchain.CXX.IsAvailable=yes
+%.log: ZMK.makeOverrides += Toolchain.CXX.IsClang=
 %.log: ZMK.makeOverrides += Toolchain.CXX.IsGcc=yes
+%.log: ZMK.makeOverrides += Toolchain.IsClang=
 %.log: ZMK.makeOverrides += Toolchain.cc.dumpmachine=
-%.log: ZMK.makeOverrides += Toolchain.gcc.dumpmachine=
+%.log: ZMK.makeOverrides += Toolchain.cc.version=
 %.log: ZMK.makeOverrides += Toolchain.cxx.dumpmachine=
+%.log: ZMK.makeOverrides += Toolchain.cxx.version=
 %.log: ZMK.makeOverrides += Toolchain.g++.dumpmachine=
+%.log: ZMK.makeOverrides += Toolchain.gcc.dumpmachine=
 endef
 
 # Find the path of the zmk installation
